Fix display issues with titles that move off-screen.

--- a/var/httpd/htdocs/skins/Agent/default/css/Core.AppointmentCalendar.css
+++ b/var/httpd/htdocs/skins/Agent/default/css/Core.AppointmentCalendar.css
@@ -214,6 +214,14 @@
     }
 
     .fc-following {
+        padding-top: 2px !important;
+    }
+
+    .fc-widget-header .fc-following {
+        text-transform: uppercase;
+    }
+
+    .fc-resource-area ~ .fc-time-area .fc-following {
         padding-top: 1px !important;
     }
 
